src/deploy/kubernetes/infra/06_addons/keycloak/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
#        image: alemairebe/keycloak:14.0.0
#        image: simaofsilva/keycloak:15.0.0
        
        image: svefors/keycloak-x:12.0.2
        ports:
        - name: http
          containerPort: 8080
        - name: https
          containerPort: 8443
        args: ["start-dev"]

#        readinessProbe:
#          httpGet:
#            path: /auth/realms/master
#            port: 8080
#          initialDelaySeconds: 10
