src/deploy/kubernetes/infra/06_addons/keycloak/templates/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
#    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"

    nginx.ingress.kubernetes.io/rewrite-target: /\$2
#    nginx.ingress.kubernetes.io/configuration-snippet: |
#      rewrite ^(/country)$ $1/ redirect; #Redirect if traling slash is missing
    # basic auth
    nginx.ingress.kubernetes.io/auth-type: basic
    nginx.ingress.kubernetes.io/auth-secret: authentication-secret


spec:
  tls:
    - hosts:
        - ${_Values_host_name}
      secretName: server-certificate-secret
  rules:
    - host: ${_Values_host_name}
      http:
        paths:
          - path: /keycloak(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
